# WorkTimer

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  Alarm.cpp  Alarm.h  CMakeLists.txt  ChartsTooltip.cpp  ChartsTooltip.h  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationDialog.ui  DesktopWidget.cpp  DesktopWidget.h  Main.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  PieChart.cpp  PieChart.h  PieTooltip.cpp  PieTooltip.h  ProgressWidget.cpp  ProgressWidget.h  Quotes.h  RangeSelectorWidget.cpp  RangeSelectorWidget.h  RangeSelectorWidget.ui  Utils.cpp  Utils.h  WorkStatistics.cpp  WorkStatistics.h  WorkStatistics.ui  WorkTimer.cpp  WorkTimer.h  readme.md  resources.rc.in  version.h.in
installer/: script.iss.in
rsc/: resources.qrc
